<resources>
    <string name="app_name">BBChars</string>

    <!-- Generic Strings -->
    <string name="not_auth">Not authorised</string>
    <string name="error_occ">An error has occurred</string>
    <string name="placeholder">PLACEHOLDER</string>

    <!-- Title Strings -->
    <string name="title_character">Character</string>

    <!-- Label Strings -->
    <string name="label_name">Name:</string>
    <string name="label_occupation">Occupation:</string>
    <string name="label_status">Status:</string>
    <string name="label_nickname">Nickname:</string>
    <string name="label_season_appearance">Season Appearance:</string>

    <!-- Hint Strings -->
    <string name="hint_type_char">Type your character here</string>
</resources>