<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:text="@string/placeholder"
            android:padding="@dimen/default_padding"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/iv_image"
            android:padding="@dimen/default_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_label_name"
                android:text="@string/label_name"
                android:padding="@dimen/default_padding"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_name"
                android:text="@string/placeholder"
                android:padding="@dimen/default_padding"
                android:textColor="@color/black"
                android:layout_weight="7"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_label_photo"
                android:text="@string/label_name"
                android:padding="@dimen/default_padding"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_photo"
                android:text="@string/placeholder"
                android:padding="@dimen/default_padding"
                android:textColor="@color/black"
                android:layout_weight="7"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_label_occupation"
                android:text="@string/label_occupation"
                android:padding="@dimen/default_padding"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/line_occupation"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_occupation"
                    android:text="@string/placeholder"
                    android:padding="@dimen/default_padding"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_label_status"
                android:text="@string/label_status"
                android:padding="@dimen/default_padding"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_status"
                android:text="@string/placeholder"
                android:padding="@dimen/default_padding"
                android:textColor="@color/black"
                android:layout_weight="7"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_label_nickname"
                android:text="@string/label_nickname"
                android:padding="@dimen/default_padding"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_nickname"
                android:text="@string/placeholder"
                android:padding="@dimen/default_padding"
                android:textColor="@color/black"
                android:layout_weight="7"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_label_season_appearance"
                android:text="@string/label_season_appearance"
                android:padding="@dimen/default_padding"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/line_season_appearance"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_season_appearance"
                    android:text="@string/placeholder"
                    android:padding="@dimen/default_padding"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>